# podcast-generator

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  Start Podcast Generator.bat  config.yaml  pyproject.toml
docs/: GOAL.md
src/capella_podcast/: __init__.py  artifacts.py  cli.py  config.py  docx_reader.py  docx_render.py  docx_validate.py  html_text.py  ingest.py  llm.py  manifest.py  podcast.py  prompts.py  script.py  summary.py  tts.py
src/capella_podcast/gui/: __init__.py  __main__.py  actions.py  config_edit.py  jobs.py  server.py
src/capella_podcast/gui/static/: app.js  index.html  style.css
tests/: compare_layout.py  test_artifacts.py  test_regen.py  validate_all.py  validate_ingest.py
