[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "capella-podcast"
version = "0.1.0"
description = "Fully local, offline Capella course podcast generator: course JSON -> Summary Report (DOCX) -> Podcast Script (DOCX) -> Podcast (MP3)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Austin Potter" }]
requires-python = ">=3.10"
dependencies = [
    "llama-cpp-python>=0.3",
    "huggingface_hub>=0.23",
    "kokoro>=0.9.2",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "soundfile>=0.12",
    "numpy",
    "PyYAML>=6.0",
    "psutil>=5.9",
]

[project.scripts]
capella-podcast = "capella_podcast.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
